updating to include the backup plugin